--- a/codigo-fonte/relatorio-vendas.html
+++ b/codigo-fonte/relatorio-vendas.html
@@ -11,7 +11,7 @@
   <script src="scripts/scripts.js" type="text/javascript"></script>
 
  
-  <title>Titron - Relatório</title>
+  <title>Nexum - Relatório</title>
 </head>
 <body>
     <header>
@@ -26,14 +26,13 @@
               <a class="sub-btn"><i class="bi bi-cash"></i>Caixa<i class="bi bi-caret-right-fill dropdown"></i></a>
               <div class="sub-menu">
                 <a href="caixa-lancamento.html" class="sub-item">Lançamentos</a>
-                <a href="caixa-sangria.html" class="sub-item">Sangria</a>
                 <a href="caixa-fechamento.html" class="sub-item">Fechamento</a>
               </div>
             </div>
             <div class="item">
               <a class="sub-btn relatorio"><i class="bi bi-bar-chart-fill"></i>Relatório<i class="bi bi-caret-right-fill dropdown"></i></a>
               <div class="sub-menu">
-                <a class="sub-item">Financeiro</a>
+                <a href="relatorio-financeiro.html" class="sub-item">Financeiro</a>
                 <a href="relatorio-vendas.html" class="sub-item">Vendas</a>
                 <a href="relatorio-comodato.html" class="sub-item">Comodato</a>
               </div>
@@ -64,7 +63,7 @@
           <form action="">
             <fieldset class="fieldsetrelvendas">
               <br>
-              <div class="inputBox-relvendas">
+              <div class="inputBox-relvendas" >
                 <label for="dataini" class="labelInput-relvendas">Data Inicial:</label>
                 <input type="date" name="dataini" id="dataini" class="inputUser-relvendas" required>
               </div>
