--- a/codigo-fonte/index.html
+++ b/codigo-fonte/index.html
@@ -10,7 +10,6 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/index.css">
     <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
-    <script src="scripts/index.js"></script>
 
 
 
@@ -19,7 +18,7 @@
 
 <body class="body-login">
     <div class="box">
-        <form id="formlogin" action="home.html">
+        <form id="formlogin" >
             <fieldset>
                 <legend><b>Login</b></legend>
                 <br>
@@ -34,7 +33,7 @@
                 </div>
                 <br><br>
                 <br><br>
-                <input type="submit" onclick="validadorForm()" name="submit" id="submit" value="Login">
+                <input type="button" onclick="validadorForm()" name="submit" id="submit" value="Login">
             </fieldset> 
         </form>
     </div>
