--- a/codigo-fonte/caixa-lancamento.html
+++ b/codigo-fonte/caixa-lancamento.html
@@ -9,12 +9,14 @@
   <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="css/caixa-lancamento.css">
   <script src="scripts/scripts.js" type="text/javascript"></script>
+  <script src="scripts/config.js" type="text/javascript"></script>
+
 
 
  
   <title>Nexum - Caixa</title>
 </head>
-<body>
+<body onload="statusonload()">
     <header>
       <nav>
         </div>
@@ -43,7 +45,7 @@
                 <a class="sub-btn"><i class="bi bi-person-circle"></i>Conta<i class="bi bi-caret-right-fill dropdown"></i></a>
                 <div class="sub-menu">
                   <a href="usuario-gerenciar.html" class="sub-item">Gerenciar</a>
-                  <a href="index.html" class="sub-item">Sair</a>
+                  <a class="sub-item" onclick="logout()">Sair</a>
                 </div>
               </div>
         </div>
@@ -56,6 +58,9 @@
       <div class="tagusuario">
         <i class="bi bi-person-circle"></i>
         <label ><span id="tagusuario"></span></label>      
+      </div>
+      <div class="tagsgp">
+        <label >Status SGP: <span id="statusconexao"></span></label>      
       </div>
     </div>
     <div class="corpo">   
@@ -137,7 +142,12 @@
         </table>
       </div>
     </div> 
-
+    <script src="https://www.gstatic.com/firebasejs/9.6.7/firebase-app-compat.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/9.6.7/firebase-auth-compat.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/9.6.7/firebase-firestore-compat.js"></script>
+    <script src="scripts/init-firebase.js"></script>
+    <script src="scripts/block.js" type="text/javascript"></script>
+    <script src="scripts/home.js" type="text/javascript"></script>
   
 </body>
 </html>
