--- a/codigo-fonte/configuracao.html
+++ b/codigo-fonte/configuracao.html
@@ -43,7 +43,7 @@
                 <a class="sub-btn"><i class="bi bi-person-circle"></i>Conta<i class="bi bi-caret-right-fill dropdown"></i></a>
                 <div class="sub-menu">
                   <a href="usuario-gerenciar.html" class="sub-item">Gerenciar</a>
-                  <a href="index.html" class="sub-item">Sair</a>
+                  <a class="sub-item" onclick="logout()">Sair</a>
                 </div>
               </div>
         </div>
@@ -82,12 +82,17 @@
             </div>
             
             <br><br>
-            <input type="submit" name="submit" value="Adicionar" id="submit-config">
+            <input type="button" name="submit" onclick="atualizadados()" value="Adicionar" id="submit-config">
             <input type="button" name="teste" onclick="consultasgp()" value="Testar" id="submit-config">
         </fieldset>
     </form>
     </div>
-
+    <script src="https://www.gstatic.com/firebasejs/9.6.7/firebase-app-compat.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/9.6.7/firebase-auth-compat.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/9.6.7/firebase-firestore-compat.js"></script>
+    <script src="scripts/init-firebase.js"></script>
+    <script src="scripts/block.js" type="text/javascript"></script>
+    <script src="scripts/home.js" type="text/javascript"></script>
   
 </body>
 </html>
