--- a/codigo-fonte/home.html
+++ b/codigo-fonte/home.html
@@ -9,11 +9,12 @@
   <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="css/home.css">
   <script src="scripts/scripts.js" type="text/javascript"></script>
+  <script src="scripts/config.js" type="text/javascript"></script>
 
  
   <title>Nexum - Home</title>
 </head>
-<body>
+<body onload="statusonload()">
     <header>
       <nav>
         </div>
@@ -56,6 +57,9 @@
         <i class="bi bi-person-circle"></i>
         <label ><span id="tagusuario"></span></label>      
       </div>
+      <div class="tagsgp">
+        <label >Status SGP: <span id="statusconexao"></span></label>      
+      </div>
     </div>
     <div class="corpo">
 
@@ -63,6 +67,7 @@
     </div>
     <script src="https://www.gstatic.com/firebasejs/9.6.7/firebase-app-compat.js"></script>
     <script src="https://www.gstatic.com/firebasejs/9.6.7/firebase-auth-compat.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/9.6.7/firebase-firestore-compat.js"></script>
     <script src="scripts/init-firebase.js"></script>
     <script src="scripts/block.js" type="text/javascript"></script>
     <script src="scripts/home.js" type="text/javascript"></script>
