--- a/codigo-fonte/pdv.html
+++ b/codigo-fonte/pdv.html
@@ -14,6 +14,7 @@
   <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
   <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="css/pdv.css">
+  <script src="scripts/config.js" type="text/javascript"></script>
 
 
 
@@ -24,7 +25,7 @@
 <script src="scripts/pdv.js" type="text/javascript"></script>
 
 
-<body>
+<body  onload="statusonload()">
   <header>
     <nav>
       </div>
@@ -55,7 +56,7 @@
                 class="bi bi-caret-right-fill dropdown"></i></a>
             <div class="sub-menu">
               <a href="usuario-gerenciar.html" class="sub-item">Gerenciar</a>
-              <a href="index.html" class="sub-item">Sair</a>
+              <a class="sub-item" onclick="logout()">Sair</a>
             </div>
           </div>
         </div>
@@ -68,6 +69,9 @@
     <div class="tagusuario">
       <i class="bi bi-person-circle"></i>
       <label><span id="tagusuario"></span></label>
+    </div>
+    <div class="tagsgp">
+      <label >Status SGP: <span id="statusconexao"></span></label>      
     </div>
   </div>
   <div class="corpo">
@@ -186,7 +190,12 @@
       </div>
     </div>
   </div>
-
+  <script src="https://www.gstatic.com/firebasejs/9.6.7/firebase-app-compat.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/9.6.7/firebase-auth-compat.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/9.6.7/firebase-firestore-compat.js"></script>
+  <script src="scripts/init-firebase.js"></script>
+  <script src="scripts/block.js" type="text/javascript"></script>
+  <script src="scripts/home.js" type="text/javascript"></script>
 </body>
 
 </html>
