--- a/codigo-fonte/relatorio-financeiro.html
+++ b/codigo-fonte/relatorio-financeiro.html
@@ -9,11 +9,12 @@
   <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="css/relatorio-financeiro.css">
   <script src="scripts/scripts.js" type="text/javascript"></script>
+  <script src="scripts/config.js" type="text/javascript"></script>
 
  
   <title>Nexum - Relatório</title>
 </head>
-<body>
+<body onload="statusonload()">
     <header>
       <nav>
         </div>
@@ -42,7 +43,7 @@
                 <a class="sub-btn"><i class="bi bi-person-circle"></i>Conta<i class="bi bi-caret-right-fill dropdown"></i></a>
                 <div class="sub-menu">
                   <a href="usuario-gerenciar.html" class="sub-item">Gerenciar</a>
-                  <a href="index.html" class="sub-item">Sair</a>
+                  <a class="sub-item" onclick="logout()">Sair</a>
                 </div>
               </div>
         </div>
@@ -55,6 +56,9 @@
       <div class="tagusuario">
         <i class="bi bi-person-circle"></i>
         <label ><span id="tagusuario"></span></label>      
+      </div>
+      <div class="tagsgp">
+        <label >Status SGP: <span id="statusconexao"></span></label>      
       </div>
     </div>
     <div class="corpo"> 
@@ -148,7 +152,12 @@
     </div>
 
     </div>
-    
+    <script src="https://www.gstatic.com/firebasejs/9.6.7/firebase-app-compat.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/9.6.7/firebase-auth-compat.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/9.6.7/firebase-firestore-compat.js"></script>
+    <script src="scripts/init-firebase.js"></script>
+    <script src="scripts/block.js" type="text/javascript"></script>
+    <script src="scripts/home.js" type="text/javascript"></script>
 
   
 </body>
