--- a/codigo-fonte/estoque.html
+++ b/codigo-fonte/estoque.html
@@ -7,6 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js" charset="UTF-8"></script>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+  <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
   <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="css/estoque.css">
   <script src="scripts/scripts.js" type="text/javascript"></script>
@@ -19,7 +20,9 @@
 </head>
 
 <body onload="statusonload()">
-  <dialog>
+
+
+  <dialog id="dialogcadastro">
     <div class="boxdialog divcorpo">
       <form action="">
         <fieldset class="fielddialog">
@@ -30,7 +33,7 @@
           <br>
           <div class="inputBox-estoque">
             <label for="produto" class="labelInput-estoque">Drescrição:</label>
-            <input type="text" name="produto" disabled id="produto" class="inputUser-estoque" required>
+            <input type="text" name="produto"  id="produto" class="inputUser-estoque" required>
           </div>
           <br>
           <div class="inputBox-estoque">
@@ -40,15 +43,48 @@
           <br>
           <div class="inputBox-estoque">
             <label for="vunit" class="labelInput-estoque">Preço:</label>
-            <input type="number" name="vunit" disabled id="vunit" class="inputUser-estoque" required>
+            <input type="number" name="vunit"  id="vunit" class="inputUser-estoque" required>
           </div><br>
           <br>
-          <input type="button" onclick="fechamodal()" class="botao" value="Cadastrar" id="botao-cadastra">
+          <input type="button" onclick="cadastraproduto()" class="botao" value="Cadastrar" id="botao-cadastra">
           
         </fieldset>
       </form>
     </div>
   </dialog>
+
+  <dialog id="dialogedit">
+    <div class="boxdialog divcorpo">
+      <form action="">
+        <fieldset class="fielddialog">
+          <div class="inputBox-estoque">
+            <label for="coditem" class="labelInput-estoque">Codigo:</label>
+            <input type="number" name="coditem" id="coditeme" class="inputUser-estoque" required>
+          </div>
+          <br>
+          <div class="inputBox-estoque">
+            <label for="produto" class="labelInput-estoque">Drescrição:</label>
+            <input type="text" name="produto"  id="produtoe" class="inputUser-estoque" required>
+          </div>
+          <br>
+          <div class="inputBox-estoque">
+            <label for="qtd" class="labelInput-estoque">Quantidade:</label>
+            <input type="number" name="qtd" id="qtde" class="inputUser-estoque" required>
+          </div>
+          <br>
+          <div class="inputBox-estoque">
+            <label for="vunit" class="labelInput-estoque">Preço:</label>
+            <input type="number" name="vunit"  id="vunite" class="inputUser-estoque" required>
+          </div><br>
+          <br>
+          <input type="button" value="Editar" id="botaoEditar">
+          
+        </fieldset>
+      </form>
+    </div>
+  </dialog>
+
+
   <header>
 
   </body>
@@ -107,15 +143,15 @@
             <br>
             <div class="inputBox-estoque">
               <label for="coditem" class="labelInput-estoque">Produto:</label>
-              <input type="text" name="coditem" id="coditem" class="inputUser-estoque" required>
+              <input type="text" name="busca" id="busca" class="inputUser-estoque" required>
             </div>
             <br>
-            <input type="button" value="Pesquisar Produto" id="submit-estoque">
+            <input type="button" onclick="filtraDados()" value="Pesquisar Produto" id="submit-estoque">
             <input type="button" onclick="abremodal()" class="botao" value="Cadastrar Produto" id="submit-estoque">
           </fieldset>
         </form>
       </div>
-
+      <div class="corpotable">
       <table class="tabelavendas">
         <thead>
           <tr class="tabcabeca">
@@ -126,30 +162,11 @@
             <th id="acao">Ação</th>
           </tr>
         </thead>
-        <tbody>
-          <tr>
-            <td>3987</td>
-            <td>Roteador de marca tak</td>
-            <td>10</td>
-            <td>R$ 20,00</td>
-            <td><i class="bi bi-pencil-square" id="botaoedit"></i><i class="bi bi-trash-fill" id="botaodelete"></i></td>
-          </tr>
-          <tr>
-            <td>3987</td>
-            <td>Roteador de marca tak</td>
-            <td>10</td>
-            <td>R$ 20,00</td>
-            <td><i class="bi bi-pencil-square" id="botaoedit"></i><i class="bi bi-trash-fill" id="botaodelete"></i></td>
-          </tr>
-          <tr>
-            <td>3987</td>
-            <td>Roteador de marca tak</td>
-            <td>10</td>
-            <td>R$ 20,00</td>
-            <td><i class="bi bi-pencil-square" id="botaoedit"></i><i class="bi bi-trash-fill" id="botaodelete"></i></td>
-          </tr>
+        <tbody id="tabela">
+
         </tbody>
       </table>
+    </div>
     </div>
 
     <div>
