--- a/codigo-fonte/estoque.html
+++ b/codigo-fonte/estoque.html
@@ -155,7 +155,7 @@
       <table class="tabelavendas">
         <thead>
           <tr class="tabcabeca">
-            <th id="id">ID</th>
+            <th id="id">Código</th>
             <th id="prod">Produto</th>
             <th id="qtd">Quantidade</th>
             <th id="valor">Preço</th>
