--- a/codigo-fonte/estoque.html
+++ b/codigo-fonte/estoque.html
@@ -93,7 +93,7 @@
       <div class="side-bar active">
         <div class="menu">
           <div class="item"><a href="home.html"><i class="bi bi-house"></i>Home</a></div>
-          <div class="item"><a href="estoque.html"><i class="bi bi-basket2"></i>estoque</a></div>
+          <div class="item"><a href="pdv.html"><i class="bi bi-basket2"></i>PDV</a></div>
           <div class="item estoque"><a><i class="bi bi-upc-scan"></i>Estoque</a></div>
           <div class="item">
             <a class="sub-btn"><i class="bi bi-cash"></i>Caixa<i class="bi bi-caret-right-fill dropdown"></i></a>
