--- a/codigo-fonte/pdv.html
+++ b/codigo-fonte/pdv.html
@@ -8,7 +8,6 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js" charset="UTF-8"></script>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
-  <script src="scripts/pdv.js" type="text/javascript"></script>
   <script src="scripts/scripts.js" type="text/javascript"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.mask/1.14.11/jquery.mask.min.js"></script>
   <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
@@ -19,13 +18,11 @@
 
 
 
+
   <title>Nexum - PDV</title>
 </head>
 
-<script src="scripts/pdv.js" type="text/javascript"></script>
-
-
-<body  onload="statusonload()">
+<body onload="statusonload()">
   <header>
     <nav>
       </div>
@@ -128,7 +125,7 @@
       </form>
     </div>
     <div class="tabelapdv divcorpo">
-      <table class="tabelavendas">
+      <table id="tabelavendas">
         <thead>
           <tr class="colunavendas">
             <th id="cliente">Cliente</th>
@@ -137,7 +134,7 @@
             <th id="qtd">Quantidade</th>
             <th id="vunit">Valor Unitário</th>
             <th id="vtotal">Total</th>
-            <th id="acao">Ação</th>
+            <th id="acao">Tipo</th>
           </tr>
         </thead>
         <tbody id="tabela">
@@ -145,7 +142,17 @@
         </tbody>
       </table>
       <div class="boxbotaofechavenda">
-        <input type="button" onclick="inserelocalstorage()" value="Fechar Venda" name="botaofechavenda" class="botaofechavenda">
+        <input type="button" onclick="fecharvenda()" value="Fechar Venda" name="botaofechavenda" class="botaofechavenda">
+      </div>
+      <div class="boxresultado">
+        <form action="">
+          <fieldset class="fieldsetrelvendas">
+            <br>
+            <div class="inputBox-relvendas">
+              <label for="dataini" class="labelInput-relvendas">Valor Total: R$ <span id="resultado"></span></label>
+            <br>
+          </fieldset>
+        </form>
       </div>
     </div>
   </div>
@@ -155,6 +162,8 @@
   <script src="scripts/init-firebase.js"></script>
   <script src="scripts/block.js" type="text/javascript"></script>
   <script src="scripts/home.js" type="text/javascript"></script>
+  <script src="scripts/pdv.js" type="text/javascript"></script>
+
 </body>
 
 </html>
