--- a/codigo-fonte/relatorio-comodato.html
+++ b/codigo-fonte/relatorio-comodato.html
@@ -91,42 +91,7 @@
               <th id="acao">Ação</th>
             </tr>
           </thead>
-          <tbody>
-            <tr>
-              <td>Fulano de tal pereira da silva</td>
-              <td>Produto 1 marca nova</td>
-              <td>3</td>
-              <td>10/05/2024</td>
-              <td><i class="bi bi-trash-fill" id="botaodelete"></i><i class="bi bi-pencil-square" id="botaoedit"></i></td>
-            </tr>
-            <tr>
-              <td>Fulano de tal da silva</td>
-              <td>Produto 1 marca nova</td>
-              <td>3</td>
-              <td>10/05/2024</td>
-              <td><i class="bi bi-trash-fill" id="botaodelete"></i><i class="bi bi-pencil-square" id="botaoedit"></i></td>
-            </tr>
-            <tr>
-              <td>Fulano de tal da silva</td>
-              <td>Produto 1 marca nova</td>
-              <td>3</td>
-              <td>10/05/2024</td>
-              <td><i class="bi bi-trash-fill" id="botaodelete"></i><i class="bi bi-pencil-square" id="botaoedit"></i></td>
-            </tr>
-            <tr>
-              <td>Fulano de tal da silva</td>
-              <td>Produto 1 marca nova</td>
-              <td>3</td>
-              <td>10/05/2024</td>
-              <td><i class="bi bi-trash-fill" id="botaodelete"></i><i class="bi bi-pencil-square" id="botaoedit"></i></td>
-            </tr>
-            <tr>
-              <td>Fulano de tal da silva</td>
-              <td>Produto 1 marca nova</td>
-              <td>3</td>
-              <td>10/05/2024</td>
-              <td><i class="bi bi-trash-fill" id="botaodelete"></i><i class="bi bi-pencil-square" id="botaoedit"></i></td>
-            </tr>
+          <tbody id="tabela">
   
           </tbody>
         </table>
@@ -138,5 +103,7 @@
     <script src="scripts/init-firebase.js"></script>
     <script src="scripts/block.js" type="text/javascript"></script>
     <script src="scripts/home.js" type="text/javascript"></script>
+    <script src="scripts/relatorio-comodato.js" type="text/javascript"></script>
+
 </body>
 </html>
