--- a/codigo-fonte/caixa-fechamento.html
+++ b/codigo-fonte/caixa-fechamento.html
@@ -83,15 +83,8 @@
               <th id="tipo">Tipo de Operação</th>
             </tr>
           </thead>
-          <tbody>
-            <tr>
-              <td>R$ 200,00</td>
-              <td>Saida</td>
-            </tr>
-            <tr>
-              <td>R$ 200,00</td>
-              <td>Entrada</td>
-            </tr>
+          <tbody id="tabela">
+            
           </tbody>
         </table>
         <div class="boxresultado">
