--- a/codigo-fonte/relatorio-vendas.html
+++ b/codigo-fonte/relatorio-vendas.html
@@ -96,41 +96,7 @@
 
             </tr>
           </thead>
-          <tbody>
-            <tr>
-              <td>10/05/2024</td>
-              <td>R$ 200,00</td>
-              <td>Produto da venda do caixa</td>
-              <td>Fulano de tal</td>
-
-            </tr>
-            <tr>
-              <td>10/05/2024</td>
-              <td>R$ 200,00</td>
-              <td>Produto da venda do caixa</td>
-              <td>Fulano de tal</td>
-
-            </tr>
-            <tr>
-              <td>10/05/2024</td>
-              <td>R$ 200,00</td>
-              <td>Produto da venda do caixa</td>
-              <td>Fulano de tal</td>
-
-            </tr>
-            <tr>
-              <td>10/05/2024</td>
-              <td>R$ 200,00</td>
-              <td>Produto da venda do caixa</td>
-              <td>Fulano de tal</td>
-
-            </tr>
-            <tr>
-              <td>10/05/2024</td>
-              <td>R$ 200,00</td>
-              <td>Produto da venda do caixa</td>
-              <td>Fulano de tal</td>
-            </tr>
+          <tbody id="tabela">
  
           </tbody>
         </table>
