--- a/codigo-fonte/relatorio-financeiro.html
+++ b/codigo-fonte/relatorio-financeiro.html
@@ -98,43 +98,8 @@
               <th id="acao">Ação</th>
             </tr>
           </thead>
-          <tbody>
-            <tr>
-              <td>10/05/2024</td>
-              <td>R$ 200,00</td>
-              <td>fulano</td>
-              <td>Saida</td>
-              <td><i class="bi bi-trash-fill" id="botaodelete"></i><i class="bi bi-pencil-square" id="botaoedit"></i></td>
-            </tr>
-            <tr>
-              <td>10/05/2024</td>
-              <td>R$ 200,00</td>
-              <td>fulano</td>
-              <td>Saida</td>
-              <td><i class="bi bi-trash-fill" id="botaodelete"></i><i class="bi bi-pencil-square" id="botaoedit"></i></td>
-            </tr>
-            <tr>
-              <td>10/05/2024</td>
-              <td>R$ 200,00</td>
-              <td>fulano</td>
-              <td>Saida</td>
-              <td><i class="bi bi-trash-fill" id="botaodelete"></i><i class="bi bi-pencil-square" id="botaoedit"></i></td>
-            </tr>
-            <tr>
-              <td>10/05/2024</td>
-              <td>R$ 200,00</td>
-              <td>fulano</td>
-              <td>Saida</td>
-              <td><i class="bi bi-trash-fill" id="botaodelete"></i><i class="bi bi-pencil-square" id="botaoedit"></i></td>
-            </tr>
-            <tr>
-              <td>10/05/2024</td>
-              <td>R$ 200,00</td>
-              <td>fulano</td>
-              <td>Saida</td>
-              <td><i class="bi bi-trash-fill" id="botaodelete"></i><i class="bi bi-pencil-square" id="botaoedit"></i></td>
-            </tr>
-  
+          <tbody id="tabela">
+           
           </tbody>
         </table>
         <div class="boxresultado">
