--- a/codigo-fonte/relatorio-financeiro.html
+++ b/codigo-fonte/relatorio-financeiro.html
@@ -9,6 +9,7 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
   <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="css/relatorio-financeiro.css">
+  <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
   <script src="scripts/scripts.js" type="text/javascript"></script>
   <script src="scripts/config.js" type="text/javascript"></script>
 
@@ -72,23 +73,17 @@
           <fieldset class="fieldsetrelfinan">
             <br>
             <div class="inputBox-relfinan">
-              <label for="dataini" class="labelInput-relfinan">Data Inicial:</label>
-              <input type="date" name="dataini" id="dataini" class="inputUser-relfinan" required>
-            </div>
-            <br>
-            <br>
-            <div class="inputBox-relfinan">
-              <label for="dataini" class="labelInput-relfinan">Data Inicial:</label>
-              <input type="date" name="dataini" id="dataini" class="inputUser-relfinan" required>
+              <label for="produto" class="labelInput-relvendas">Pesquisa:</label>
+              <input type="text" name="produto" id="busca" class="inputUser-relfinan" required>
             </div>
             <div class="inputBox-relfinan">
-              <input type="radio" name="comodato" id="comodato" class="radio-venda">
+              <input type="radio" name="tipo" id="comodato" value="entrada" class="radio-venda">
               <label for="comodato" class="labelInput-pdv">Entrada</label>
-              <input type="radio" name="comodato" id="venda" class="radio-comodato">
+              <input type="radio" name="tipo" id="venda" value="saida" class="radio-comodato">
               <label for="comodato" class="labelInput-pdv">Saida</label>
             </div>
             <br>
-            <input type="submit" name="submit" value="Pesquisar" id="submit-relfinan">
+            <input type="button" name="submit" onclick="filtradados()" value="Pesquisar" id="submit-relfinan">
           </fieldset>
         </form>
         <div class="corpotable">
@@ -112,7 +107,7 @@
             <fieldset class="fieldsetrelfinan">
               <br>
               <div class="inputBox-relfinan">
-                <label for="dataini" class="labelInput-relfinan">Valor Total: R$ 1.200,00</label>
+                <label for="dataini" class="labelInput-relvendas">Valor Total: R$ <span id="resultado"></span></label>
                 <br>
             </fieldset>
           </form>
@@ -126,6 +121,8 @@
     <script src="scripts/init-firebase.js"></script>
     <script src="scripts/block.js" type="text/javascript"></script>
     <script src="scripts/home.js" type="text/javascript"></script>
+    <script src="scripts/relatorio-financeiro.js" type="text/javascript"></script>
+
 
 
 </body>
