--- a/codigo-fonte/home.html
+++ b/codigo-fonte/home.html
@@ -58,7 +58,7 @@
         <label ><span id="tagusuario"></span></label>      
       </div>
       <div class="tagsgp">
-        <label >Status SGP: <span id="statusconexao"></span></label>      
+        <label >Status uSGP: <span id="statusconexao"></span></label>      
       </div>
     </div>
     <div class="corpo">
